--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ header {
 nav a {
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: 15px;
+    font-weight: 700;
     padding-right: 10px;
+}
+nav a:hover {
+    color: #c2771e;
 }
